--- a/zeebe-benchmark/Chart.yaml
+++ b/zeebe-benchmark/Chart.yaml
@@ -1,24 +1,32 @@
 apiVersion: v2
 name: zeebe-benchmark
-description: A Helm chart for Kubernetes
+description: A Helm chart for Zeebe benchmarks
 
-# A chart can be either an 'application' or a 'library' chart.
-#
-# Application charts are a collection of templates that can be packaged into versioned archives
-# to be deployed.
-#
-# Library charts provide useful utilities or functions for the chart developer. They're included as
-# a dependency of application charts to inject those utilities and functions into the rendering
-# pipeline. Library charts do not define any templates and therefore cannot be deployed.
 type: application
-
-# This is the chart version. This version number should be incremented each time you make changes
-# to the chart and its templates, including the app version.
-# Versions are expected to follow Semantic Versioning (https://semver.org/)
 version: 0.1.0
+appVersion: "8.1.2"
 
-# This is the version number of the application being deployed. This version number should be
-# incremented each time you make changes to the application. Versions are not expected to
-# follow Semantic Versioning. They should reflect the version the application is using.
-# It is recommended to use it with quotes.
-appVersion: "1.16.0"
+sources:
+  - https://github.com/zeebe-io/benchmark-helm
+  - https://github.com/camunda/zeebe
+dependencies:
+  - name: camunda
+    repository: "https://helm.camunda.io"
+    version: 8.1.2
+    condition: "camunda.enabled"
+
+
+maintainers:
+  - name: Zelldon
+    email: christopher.zell@camunda.com
+
+annotations:
+  artifacthub.io/links: |
+    - name: Zeebe Repo
+      url: https://github.com/camunda/zeebe
+    - name: Zeebe Docs
+      url: https://docs.camunda.io/docs/components/zeebe/zeebe-overview/
+  artifacthub.io/containsSecurityUpdates: "false"
+  artifacthub.io/changes: |
+    - kind: added
+      description: "created new benchmark helm chart"
