--- a/zeebe-benchmark/values.yaml
+++ b/zeebe-benchmark/values.yaml
@@ -1,82 +1,185 @@
-# Default values for zeebe-benchmark.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
 
-replicaCount: 1
 
-image:
-  repository: nginx
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+camunda:
+  global:
+    image:
+      tag: SNAPSHOT
+      pullPolicy: Always
 
-imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
+  zeebe:
+    # Image configuration to configure the zeebe image specifics
+    image:
+      # Image.repository defines which image repository to use
+      repository: camunda/zeebe
+    # ClusterSize defines the amount of brokers (=replicas), which are deployed via helm
+    clusterSize: "3"
+    # PartitionCount defines how many zeebe partitions are set up in the cluster
+    partitionCount: "3"
+    # ReplicationFactor defines how each partition is replicated, the value defines the number of nodes
+    replicationFactor: "3"
 
-serviceAccount:
-  # Specifies whether a service account should be created
-  create: true
-  # Annotations to add to the service account
-  annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name: ""
+    # CpuThreadCount defines how many threads can be used for the processing on each broker pod
+    cpuThreadCount: 3
+    # IoThreadCount defines how many threads can be used for the exporting on each broker pod
+    ioThreadCount: 3
 
-podAnnotations: {}
+    # ContainerSecurityContext defines the security options the Zeebe broker container should be run with
+    containerSecurityContext:
+      capabilities:
+        add: ["NET_ADMIN"]
 
-podSecurityContext: {}
-  # fsGroup: 2000
+    # JavaOpts can be used to set java options for the zeebe brokers
+    javaOpts: >-
+      -XX:MaxRAMPercentage=25.0
+      -XX:+ExitOnOutOfMemoryError
+      -XX:+HeapDumpOnOutOfMemoryError
+      -XX:HeapDumpPath=/usr/local/zeebe/data
+      -XX:ErrorFile=/usr/local/zeebe/data/zeebe_error%p.log
+      -Xlog:gc*:file=/usr/local/zeebe/data/gc.log:time:filecount=7,filesize=8M
 
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
+    # Environment variables
+    env:
+      # Enable JSON logging for google cloud stackdriver
+      - name: ZEEBE_LOG_APPENDER
+        value: Stackdriver
+      - name: ZEEBE_LOG_STACKDRIVER_SERVICENAME
+        value: zeebe
+      - name: ZEEBE_LOG_STACKDRIVER_SERVICEVERSION
+        valueFrom:
+          fieldRef:
+            fieldPath: metadata.namespace
+      - name: ZEEBE_BROKER_EXECUTION_METRICS_EXPORTER_ENABLED
+        value: "true"
+      - name: ATOMIX_LOG_LEVEL
+        value: INFO
+      - name: ZEEBE_LOG_LEVEL
+        value: DEBUG
+      - name: ZEEBE_BROKER_DATA_DISKUSAGECOMMANDWATERMARK
+        value: "0.8"
+      - name: ZEEBE_BROKER_DATA_DISKUSAGEREPLICATIONWATERMARK
+        value: "0.9"
+      - name: ZEEBE_BROKER_EXPERIMENTAL_CONSISTENCYCHECKS_ENABLEPRECONDITIONS
+        value: "true"
+      - name: ZEEBE_BROKER_EXPERIMENTAL_CONSISTENCYCHECKS_ENABLEFOREIGNKEYCHECKS
+        value: "true"
 
-service:
-  type: ClusterIP
-  port: 80
+    # Enable metrics collections
+    podLabels:
+      metrics: gmp
 
-ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+    # Resources configuration to set request and limit configuration for the container https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#requests-and-limitsS
+    resources:
+      limits:
+        cpu: 960m
+        memory: 4Gi
+      requests:
+        cpu: 800m
+        memory: 2Gi
 
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+    # PvcAccessModes can be used to configure the persistent volume claim access mode https://kubernetes.io/docs/concepts/storage/persistent-volumes/#access-modes
+    pvcAccessMode: ["ReadWriteOnce"]
+    # PvcSize defines the persistent volume claim size, which is used by each broker pod https://kubernetes.io/docs/concepts/storage/persistent-volumes/#persistentvolumeclaims
+    pvcSize: 128Gi
+    # PvcStorageClassName can be used to set the storage class name which should be used by the persistent volume claim. It is recommended to use a storage class, which is backed with a SSD.
+    pvcStorageClassName: ssd
 
-autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
+  zeebe-gateway:
+    # Replicas defines how many standalone gateways are deployed
+    replicas: 2
 
-nodeSelector: {}
+    # Image configuration to configure the zeebe-gateway image specifics
+    image:
+      # Image.repository defines which image repository to use
+      repository: camunda/zeebe
+    # LogLevel defines the log level which is used by the gateway
+    logLevel: debug
 
-tolerations: []
+    # Env can be used to set extra environment variables in each gateway container
+    env:
+      - name: ZEEBE_LOG_APPENDER
+        value: Stackdriver
+      - name: ZEEBE_LOG_STACKDRIVER_SERVICENAME
+        value: zeebe
+      - name: ZEEBE_LOG_STACKDRIVER_SERVICEVERSION
+        valueFrom:
+          fieldRef:
+            fieldPath: metadata.namespace
+      - name: ATOMIX_LOG_LEVEL
+        value: INFO
+      - name: ZEEBE_LOG_LEVEL
+        value: DEBUG
+      - name: ZEEBE_GATEWAY_MONITORING_ENABLED
+        value: "true"
+      - name: ZEEBE_GATEWAY_THREADS_MANAGEMENTTHREADS
+        value: "1"
 
-affinity: {}
+    # Enable metrics collections
+    podLabels:
+      metrics: gmp
+
+    # Resources configuration to set request and limit configuration for the container https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#requests-and-limits
+    resources:
+      limits:
+        cpu: 450m
+        memory: 400Mi
+      requests:
+        cpu: 450m
+        memory: 400Mi
+
+  # RetentionPolicy configuration to configure the elasticsearch index retention policies
+  retentionPolicy:
+    # RetentionPolicy.enabled if true, elasticsearch curator cronjob and configuration will be deployed.
+    enabled: true
+    # RetentionPolicy.schedule defines how often/when the curator should run
+    schedule: "*/15 * * * *"
+    # RetentionPolicy.zeebeIndexTTL defines after how many days a zeebe index can be deleted
+    zeebeIndexTTL: 1
+    # RetentionPolicy.zeebeIndexMaxSize can be set to configure the maximum allowed zeebe index size in gigabytes.
+    # After reaching that size, curator will delete that corresponding index on the next run.
+    # To benefit from that configuration the schedule needs to be configured small enough, like every 15 minutes.
+    zeebeIndexMaxSize: 10
+    # RetentionPolicy.operateIndexTTL defines after how many days an operate index can be deleted
+    operateIndexTTL: 30
+    # RetentionPolicy.tasklistIndexTTL defines after how many days a tasklist index can be deleted
+    tasklistIndexTTL: 30
+
+  operate:
+    enabled: false
+
+  tasklist:
+    enabled: false
+
+  identity:
+    enabled: false
+
+  optimize:
+    enabled: false
+
+  # ELASTIC
+  elasticsearch:
+    enabled: true
+    imageTag: 7.16.2
+
+    replicas: 3
+    minimumMasterNodes: 2
+
+    volumeClaimTemplate:
+      accessModes: [ "ReadWriteOnce" ]
+      storageClassName: "ssd"
+      resources:
+        requests:
+          storage: 64Gi
+
+    esJavaOpts: "-Xmx3g -Xms3g"
+
+    resources:
+      requests:
+        cpu: 1
+        memory: 3Gi
+      limits:
+        cpu: 2
+        memory: 6Gi
+
+  # Disable the service monitor as we use Google Managed Prometheus
+  prometheusServiceMonitor:
+    enabled: false
