--- a/zeebe-benchmark/templates/worker.yaml
+++ b/zeebe-benchmark/templates/worker.yaml
@@ -8,7 +8,7 @@ spec:
   selector:
     matchLabels:
       app: worker
-  replicas: 3
+  replicas: {{ .Values.worker.replicas }}
   template:
     metadata:
       labels:
@@ -17,15 +17,15 @@ spec:
     spec:
       containers:
         - name: worker
-          image: gcr.io/zeebe-io/worker:SNAPSHOT
-          imagePullPolicy: Always
+          image: {{ include "benchmark.image" . | quote }}
+          imagePullPolicy: {{ .Values.global.image.pullPolicy }}
           env:
             - name: JAVA_OPTIONS
               value: >-
                 -Dconfig.override_with_env_vars=true
                 -Dapp.brokerUrl=default-zeebe-gateway:26500
                 -Dzeebe.client.requestTimeout=62000
-                -Dapp.worker.capacity=60
+                -Dapp.worker.capacity= {{ .Values.worker.capacity }}
                 -Dapp.worker.pollingDelay=1ms
                 -Dapp.worker.completionDelay=50ms
                 -XX:+HeapDumpOnOutOfMemoryError
