--- a/zeebe-benchmark/templates/worker.yaml
+++ b/zeebe-benchmark/templates/worker.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: worker
-          image: {{ include "benchmark.image" . | quote }}
+          image: {{ .Values.global.image.repository | quote }}/worker:{{ .Values.global.image.tag }}
           imagePullPolicy: {{ .Values.global.image.pullPolicy }}
           env:
             - name: JAVA_OPTIONS
