--- a/zeebe-benchmark/templates/timer.yaml
+++ b/zeebe-benchmark/templates/timer.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: timer
-          image: {{ .Values.global.image.repository | quote }}/starter:{{ .Values.global.image.tag }}
+          image: "{{ .Values.global.image.repository }}/starter:{{ .Values.global.image.tag }}"
           imagePullPolicy: {{ .Values.global.image.pullPolicy }}
           env:
             - name: JAVA_OPTIONS
