--- a/zeebe-benchmark/templates/worker.yaml
+++ b/zeebe-benchmark/templates/worker.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: worker
-          image: {{ .Values.global.image.repository | quote }}/worker:{{ .Values.global.image.tag }}
+          image: "{{ .Values.global.image.repository }}/worker:{{ .Values.global.image.tag }}"
           imagePullPolicy: {{ .Values.global.image.pullPolicy }}
           env:
             - name: JAVA_OPTIONS
@@ -25,7 +25,7 @@ spec:
                 -Dconfig.override_with_env_vars=true
                 -Dapp.brokerUrl=default-zeebe-gateway:26500
                 -Dzeebe.client.requestTimeout=62000
-                -Dapp.worker.capacity= {{ .Values.worker.capacity }}
+                -Dapp.worker.capacity={{ .Values.worker.capacity }}
                 -Dapp.worker.pollingDelay=1ms
                 -Dapp.worker.completionDelay=50ms
                 -XX:+HeapDumpOnOutOfMemoryError
