--- a/zeebe-benchmark/values.yaml
+++ b/zeebe-benchmark/values.yaml
@@ -1,4 +1,3 @@
-
 global:
   image:
     repository: "gcr.io/zeebe-io"
@@ -21,7 +20,7 @@ timer:
   replicas: 0
   rate: 25
 
-camunda:
+camunda-platform:
   enabled: true
   global:
     image:
