--- a/zeebe-benchmark/templates/publisher.yaml
+++ b/zeebe-benchmark/templates/publisher.yaml
@@ -22,7 +22,7 @@ spec:
             - name: JAVA_OPTIONS
               value: >-
                 -Dconfig.override_with_env_vars=true
-                -Dapp.brokerUrl=default-zeebe-gateway:26500
+                -Dapp.brokerUrl={{ .Release.Name }}-zeebe-gateway:26500
                 -Dapp.starter.rate={{ .Values.publisher.rate }}
                 -Dzeebe.client.requestTimeout=62000
                 -XX:+HeapDumpOnOutOfMemoryError
