--- a/zeebe-benchmark/templates/worker.yaml
+++ b/zeebe-benchmark/templates/worker.yaml
@@ -23,7 +23,7 @@ spec:
             - name: JAVA_OPTIONS
               value: >-
                 -Dconfig.override_with_env_vars=true
-                -Dapp.brokerUrl=default-zeebe-gateway:26500
+                -Dapp.brokerUrl={{ .Release.Name }}-zeebe-gateway:26500
                 -Dzeebe.client.requestTimeout=62000
                 -Dapp.worker.capacity={{ .Values.worker.capacity }}
                 -Dapp.worker.pollingDelay=1ms
