feat: add values for leader balancing

--- a/charts/zeebe-benchmark/values.yaml
+++ b/charts/zeebe-benchmark/values.yaml
@@ -20,6 +20,10 @@ timer:
   replicas: 0
   rate: 25
 
+leaderBalancing:
+  enabled: true
+  schedule: "*/15 * * * *"
+
 camunda-platform:
   enabled: true
   global:
