--- a/charts/zeebe-benchmark/templates/leader-balancing-cron.yaml
+++ b/charts/zeebe-benchmark/templates/leader-balancing-cron.yaml
@@ -17,7 +17,7 @@ spec:
         spec:
           containers:
             - image: "curlimages/curl:7.87.0"
-              name: curator
+              name: curl
               args: ["-L", "-v", "-X", "POST", "http://{{ .Release.Name }}-zeebe-gateway:9600/actuator/rebalance/"]
           restartPolicy: OnFailure
 {{- end }}
