--- a/charts/zeebe-benchmark/templates/zeebe-config.yaml
+++ b/charts/zeebe-benchmark/templates/zeebe-config.yaml
@@ -5,3 +5,6 @@ metadata:
   labels: {{- include "zeebe-benchmark.labels" . | nindent 4 }}
 data: 
   application.yml: | {{ .Values.zeebe.config | toYaml | nindent 4 }}
+  {{- if .Values.zeebe.profiling.enabled }}
+  java-opts: -javaagent:/pyroscope/pyroscope.jar
+  {{- end }}
