--- a/charts/zeebe-benchmark/Chart.yaml
+++ b/charts/zeebe-benchmark/Chart.yaml
@@ -22,4 +22,4 @@ annotations:
     - name: Zeebe Docs
       url: https://docs.camunda.io/docs/components/zeebe/zeebe-overview/
   artifacthub.io/containsSecurityUpdates: "false"
-  artifacthub.io/changes: "- kind: added\n  description: \"add values for leader balancing\"\n- kind: added\n  description: \"add cron job for curl rebalance\"\n- kind: fixed\n  description: \"rebalancer container name\"\n"
+  artifacthub.io/changes: "- kind: added\n  description: \"set zeebe config via values\"\n"
