--- a/charts/zeebe-benchmark/Chart.yaml
+++ b/charts/zeebe-benchmark/Chart.yaml
@@ -22,4 +22,4 @@ annotations:
     - name: Zeebe Docs
       url: https://docs.camunda.io/docs/components/zeebe/zeebe-overview/
   artifacthub.io/containsSecurityUpdates: "false"
-  artifacthub.io/changes: "- kind: added\n  description: \"set zeebe config via values\"\n"
+  artifacthub.io/changes: "- kind: added\n  description: \"use `zeebe.config` for gateway too\"\n- kind: added\n  description: \"enable broker profiling via helm value\"\n- kind: fixed\n  description: \"use native env vars to set worker and starter properties\"\n- kind: fixed\n  description: \"make k8s namespace and name available\"\n"
