fix: don't fail if no javaOpts are provided

--- a/charts/zeebe-benchmark/values.yaml
+++ b/charts/zeebe-benchmark/values.yaml
@@ -145,6 +145,7 @@ camunda-platform:
           configMapKeyRef:
             name: zeebe-config
             key: java-opts
+            optional: true
 
 
     # Enable metrics collections
@@ -243,6 +244,7 @@ camunda-platform:
           configMapKeyRef:
             name: zeebe-config
             key: java-opts
+            optional: true
 
 
     # Enable metrics collections
