refactor: migrate all settings to new config
In order to be able to overwrite the configurations they have been migrated to zeebe.config, which uses the configmap instead of environment variables.

The environment variables can't be safely overwritten since it is of type array which will replace all previous values.

--- a/charts/zeebe-benchmark/test/golden/zeebe-config.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/zeebe-config.golden.yaml
@@ -11,4 +11,10 @@ metadata:
     app.kubernetes.io/managed-by: Helm
 data: 
   application.yml: | 
-    {}
+    zeebe.broker.data.diskUsageCommandWatermark: "0.8"
+    zeebe.broker.data.diskUsageReplicationWatermark: "0.9"
+    zeebe.broker.execution.metrics.exporter.enabled: "true"
+    zeebe.broker.experimental.consistencyChecks.enableForeignKeyChecks: "true"
+    zeebe.broker.experimental.consistencyChecks.enablePreconditions: "true"
+    zeebe.gateway.monitoring.enabled: "true"
+    zeebe.gateway.threads.managementThreads: "1"
