--- a/charts/zeebe-benchmark/values.yaml
+++ b/charts/zeebe-benchmark/values.yaml
@@ -25,7 +25,14 @@ leaderBalancing:
   schedule: "*/15 * * * *"
 
 zeebe:
-  config: {}
+  config:
+    zeebe.gateway.monitoring.enabled: "true"
+    zeebe.gateway.threads.managementThreads: "1"
+    zeebe.broker.experimental.consistencyChecks.enablePreconditions: "true"
+    zeebe.broker.experimental.consistencyChecks.enableForeignKeyChecks: "true"
+    zeebe.broker.executionMetricsExporterEnabled: "true"
+    zeebe.broker.data.diskUsageCommandWatermark: "0.8"
+    zeebe.broker.data.diskUsageReplicationWatermark: "0.9"
   profiling:
     enabled: false
 
@@ -110,16 +117,10 @@ camunda-platform:
         valueFrom:
           fieldRef:
             fieldPath: metadata.namespace
-      - name: ZEEBE_BROKER_EXECUTION_METRICS_EXPORTER_ENABLED
-        value: "true"
       - name: ATOMIX_LOG_LEVEL
         value: INFO
       - name: ZEEBE_LOG_LEVEL
         value: DEBUG
-      - name: ZEEBE_BROKER_DATA_DISKUSAGECOMMANDWATERMARK
-        value: "0.8"
-      - name: ZEEBE_BROKER_DATA_DISKUSAGEREPLICATIONWATERMARK
-        value: "0.9"
       - name: PYROSCOPE_SERVER_ADDRESS
         value: "http://pyroscope.pyroscope.svc.cluster.local:4040"
       - name: PYROSCOPE_APPLICATION_NAME
@@ -215,10 +216,6 @@ camunda-platform:
         value: INFO
       - name: ZEEBE_LOG_LEVEL
         value: DEBUG
-      - name: ZEEBE_GATEWAY_MONITORING_ENABLED
-        value: "true"
-      - name: ZEEBE_GATEWAY_THREADS_MANAGEMENTTHREADS
-        value: "1"
       - name: PYROSCOPE_SERVER_ADDRESS
         value: "http://pyroscope.pyroscope.svc.cluster.local:4040"
       - name: PYROSCOPE_APPLICATION_NAME
