--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -34,6 +34,8 @@ jobs:
       uses: azure/setup-helm@v3
       with:
         version: "${{ env.HELM_VERSION }}"
+    - name: Helm Add Repo
+      run: make helm.repos-add
     - name: Test
       run: make go.test
 
