feat: expose metrics port
In order to export prometheus metrics we need to expose the right container port.

--- a/charts/zeebe-benchmark/templates/publisher.yaml
+++ b/charts/zeebe-benchmark/templates/publisher.yaml
@@ -41,3 +41,6 @@ spec:
             requests:
               cpu: 250m
               memory: 256Mi
+          ports:
+            - containerPort: 9600
+              name: "http"
