--- a/charts/zeebe-benchmark/templates/worker.yaml
+++ b/charts/zeebe-benchmark/templates/worker.yaml
@@ -42,3 +42,6 @@ spec:
             requests:
               cpu: 500m
               memory: 256Mi
+          ports:
+            - containerPort: 9600
+              name: "http"
