--- a/charts/zeebe-benchmark/templates/timer.yaml
+++ b/charts/zeebe-benchmark/templates/timer.yaml
@@ -41,4 +41,7 @@ spec:
             requests:
               cpu: 250m
               memory: 256Mi
+          ports:
+            - containerPort: 9600
+              name: "http"
 
