--- a/charts/zeebe-benchmark/test/golden/worker.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/worker.golden.yaml
@@ -44,3 +44,6 @@ spec:
             requests:
               cpu: 500m
               memory: 256Mi
+          ports:
+            - containerPort: 9600
+              name: "http"
