--- a/charts/zeebe-benchmark/test/golden/timer.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/timer.golden.yaml
@@ -43,3 +43,6 @@ spec:
             requests:
               cpu: 250m
               memory: 256Mi
+          ports:
+            - containerPort: 9600
+              name: "http"
