--- a/charts/zeebe-benchmark/Chart.yaml
+++ b/charts/zeebe-benchmark/Chart.yaml
@@ -22,4 +22,4 @@ annotations:
     - name: Zeebe Docs
       url: https://docs.camunda.io/docs/components/zeebe/zeebe-overview/
   artifacthub.io/containsSecurityUpdates: "false"
-  artifacthub.io/changes: "- kind: fixed\n  description: \"use correct JDK_JAVA_OPTIONS\"\n"
+  artifacthub.io/changes: "- kind: added\n  description: \"expose metrics port\"\n- kind: fixed\n  description: \"remove trailing slash to rebalance leaders\"\n"
