refactor: migrate to standard Prometheus service monitor
Migrates back from Google Managed Prometheus setup to the standard
Prometheus service monitor. Our set up uses the label `release:
monitoring` to grab service monitors.

Additionally adds a new template, `client-service.yml`, which adds a
headless service and monitor to grab all client deployments. This works
by adding a new label, `zeebe.io/component: client` to all of our
clients.

--- a/charts/zeebe-benchmark/templates/publisher.yaml
+++ b/charts/zeebe-benchmark/templates/publisher.yaml
@@ -13,6 +13,7 @@ spec:
     metadata:
       labels:
         app: publisher
+        zeebe.io/component: client
     spec:
       containers:
         - name: publisher
