--- a/charts/zeebe-benchmark/test/golden/starter.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/starter.golden.yaml
@@ -15,7 +15,7 @@ spec:
     metadata:
       labels:
         app: starter
-        metrics: gmp
+        zeebe.io/component: client
     spec:
       containers:
         - name: starter
