--- a/charts/zeebe-benchmark/templates/timer.yaml
+++ b/charts/zeebe-benchmark/templates/timer.yaml
@@ -13,6 +13,7 @@ spec:
     metadata:
       labels:
         app: timer
+        zeebe.io/component: client
     spec:
       containers:
         - name: timer
@@ -44,4 +45,3 @@ spec:
           ports:
             - containerPort: 9600
               name: "http"
-
