--- a/charts/zeebe-benchmark/test/golden/timer.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/timer.golden.yaml
@@ -15,6 +15,7 @@ spec:
     metadata:
       labels:
         app: timer
+        zeebe.io/component: client
     spec:
       containers:
         - name: timer
