--- a/charts/zeebe-benchmark/test/golden/worker.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/worker.golden.yaml
@@ -15,7 +15,7 @@ spec:
     metadata:
       labels:
         app: worker
-        zeebe.io/component: client
+        app.kubernetes.io/component: zeebe-client
     spec:
       containers:
         - name: worker
