refactor: temporarily add gmp metric label back until full migration

--- a/charts/zeebe-benchmark/templates/worker.yaml
+++ b/charts/zeebe-benchmark/templates/worker.yaml
@@ -13,6 +13,7 @@ spec:
     metadata:
       labels:
         app: worker
+        metrics: gmp
         app.kubernetes.io/component: zeebe-client
     spec:
       containers:
