--- a/charts/zeebe-benchmark/test/golden/starter.golden.yaml
+++ b/charts/zeebe-benchmark/test/golden/starter.golden.yaml
@@ -15,6 +15,7 @@ spec:
     metadata:
       labels:
         app: starter
+        metrics: gmp
         app.kubernetes.io/component: zeebe-client
     spec:
       containers:
