--- a/charts/zeebe-benchmark/templates/starter.yaml
+++ b/charts/zeebe-benchmark/templates/starter.yaml
@@ -13,6 +13,7 @@ spec:
     metadata:
       labels:
         app: starter
+        metrics: gmp
         app.kubernetes.io/component: zeebe-client
     spec:
       containers:
