--- a/charts/zeebe-benchmark/Chart.yaml
+++ b/charts/zeebe-benchmark/Chart.yaml
@@ -22,4 +22,4 @@ annotations:
     - name: Zeebe Docs
       url: https://docs.camunda.io/docs/components/zeebe/zeebe-overview/
   artifacthub.io/containsSecurityUpdates: "false"
-  artifacthub.io/changes: "- kind: fixed\n  description: \"use renamed curator image\"\n"
+  artifacthub.io/changes: "- kind: fixed\n  description: \"correctly indent the image object\"\n- kind: changed\n  description: \"rename golden file\"\n"
