--- a/charts/zeebe-benchmark/values.yaml
+++ b/charts/zeebe-benchmark/values.yaml
@@ -386,3 +386,13 @@ camunda-platform:
     labels:
       release: monitoring
     scrapeInterval: 30s
+
+prometheus-elasticsearch-exporter:
+  serviceMonitor:
+    ## If true, a ServiceMonitor CRD is created for a prometheus operator
+    ## https://github.com/coreos/prometheus-operator
+    ##
+    enabled: true
+    # Labels used by the service monitor, specific to our prometheus installation
+    labels:
+      release: monitoring
