--- a/charts/zeebe-benchmark/Chart.yaml
+++ b/charts/zeebe-benchmark/Chart.yaml
@@ -26,4 +26,4 @@ annotations:
     - name: Zeebe Docs
       url: https://docs.camunda.io/docs/components/zeebe/zeebe-overview/
   artifacthub.io/containsSecurityUpdates: "false"
-  artifacthub.io/changes: "- kind: added\n  description: \"configure operate correctly\"\n- kind: added\n  description: \"add elastic metric exporter\"\n- kind: fixed\n  description: \"set correct elastic url\"\n"
+  artifacthub.io/changes: "- kind: fixed\n  description: \"set index size to 1\"\n"
