chore: add release notes for benchmark 0.1.20

--- a/charts/zeebe-benchmark/Chart.yaml
+++ b/charts/zeebe-benchmark/Chart.yaml
@@ -26,4 +26,4 @@ annotations:
     - name: Zeebe Docs
       url: https://docs.camunda.io/docs/components/zeebe/zeebe-overview/
   artifacthub.io/containsSecurityUpdates: "false"
-  artifacthub.io/changes: "- kind: added\n  description: \"adjust schedule\"\n- kind: added\n  description: \"define new retentionPolicy\"\n- kind: added\n  description: \"add new templates for curator\"\n- kind: changed\n  description: \"adjust name and labels\"\n"
+  artifacthub.io/changes: "- kind: fixed\n  description: \"use the correct index name\"\n"
